# JIRA_Confluence-Agent

./: .env  AGENTS.md  README.md  agent.mermaid  input.json  main.py  pyproject.toml  uipath.json
.uipath/: .auth.json  .error_log  .telemetry.json  CodedAgent.0.0.1.nupkg  CodedAgent.0.0.2.nupkg  CodedAgent.0.0.3.nupkg
__uipath/: state.db
