[project]
name = "CodedAgent"
version = "0.0.3"
description = "Meeting Notes Processor Agent - Summarizes meetings, creates JIRA tickets, and updates Confluence"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "langchain-openai>=0.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
