[project]
name = "meeting-notes-jira-agent"
version = "1.4.3"
description = "UiPath Coded Agent for processing meeting notes to JIRA tickets"
authors = [{ name = "Akash Javalekar", email = "akashjavalekar02@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "langchain-core",
    "langgraph",
    "langchain-openai",
    "langchain-mcp-adapters",
    "uipath",
    "uipath-langchain",
    "pydantic",
    "python-dotenv",
    "httpx"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
